push pdf en lugar de artifacts

--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -1,5 +1,7 @@
 name: Build LaTeX document
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
 jobs:
   build_latex:
     runs-on: ubuntu-latest
@@ -12,38 +14,25 @@ jobs:
           run: cd front-matter/portada/ && epstopdf UABLogo.eps && pdflatex portada.tex && cd .. && cd .. && make
 
 
-      - name: Upload PDF file
-        uses: actions/upload-artifact@v3
-        with:
-          name: PDF
-          path: main.pdf 
-
-      # - run: mkdir curriculums_pdf
-      # - run: mv "src/cv_sparrow/Pirate Engineer Template/main.pdf" curriculums_pdf/CURRICULUM_AURELIO_ES.pdf
-      # - run: ls curriculums_pdf/
-
-      # - name: Upload pdf to Githug Pages
-      #   uses: cpina/github-action-push-to-another-repository@main
-      #   env:
-      #     API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      # - name: Upload PDF file
+      #   uses: actions/upload-artifact@v3
       #   with:
-      #     source-directory: 'curriculums_pdf'
-      #     destination-github-username: 'aurelm95'
-      #     destination-repository-name: 'aurelm95.github.io'
-      #     user-email: aurelm95@gmail.com
-      #     target-branch: main
-      #     commit-message: "Github Action: Actualizar CVs"
+      #     name: PDF
+      #     path: main.pdf 
+
+      # Rename
+      - run: mv main.pdf ApuntsPublics.pdf
 
       # https://github.com/marketplace/actions/push-a-file-to-another-repository
-      # - name: Pushes test file
-      #   uses: dmnemec/copy_file_to_another_repo_action@main
-      #   env:
-      #     API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-      #   with:
-      #     source_file: 'curriculums_pdf/'
-      #     destination_repo: 'aurelm95/aurelm95.github.io'
-      #     destination_folder: 'static'
-      #     user_email: 'aurelm95@gmail.com'
-      #     user_name: 'aurelm95'
-      #     commit_message: '[BOT]: Github Action: Actualizar CVs'
+      - name: Pushes test file
+        uses: dmnemec/copy_file_to_another_repo_action@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source_file: 'ApuntsPublics.pdf'
+          destination_repo: 'aurelm95/aurelm95.github.io'
+          # destination_folder: ''
+          user_email: 'aurelm95@gmail.com'
+          user_name: 'aurelm95'
+          commit_message: '[BOT]: Github Action: Actualizar apuntes'
       
